--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>VR Model - Wasl</title>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>VR Model - Wasl</title>
 
-    <script type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-    </script>
+  <!-- Model Viewer Library -->
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
-    <style>
-      body {
-        margin: 0;
-        background: black;
-      }
+  <style>
+    body {
+      margin: 0;
+      background: black;
+      overflow: hidden;
+    }
 
-      model-viewer {
-        width: 100vw;
-        height: 100vh;
-      }
-    </style>
-  </head>
+    model-viewer {
+      width: 100vw;
+      height: 100vh;
+    }
+  </style>
+</head>
 
-  <body>
-    <model-viewer
-      src="wasl.glb"
-      vr
-      camera-controls
-      exposure="1"
-      environment-image="neutral">
-    </model-viewer>
-  </body>
+<body>
+  <model-viewer
+    src="wasl.glb"
+    alt="Wasl VR Model"
+    vr
+    camera-controls
+    auto-rotate
+    exposure="1"
+    environment-image="neutral"
+    interaction-prompt="auto"
+  >
+  </model-viewer>
+</body>
 </html>
