--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>VR Model - Wasl</title>
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
+  <!-- Model Viewer from jsDelivr CDN -->
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@google/model-viewer/dist/model-viewer.min.js"></script>
+
   <style>
-    body { margin: 0; background: black; }
-    model-viewer { width: 100vw; height: 100vh; }
+    body { 
+      margin: 0; 
+      background: black; 
+      overflow: hidden; 
+    }
+    model-viewer { 
+      width: 100vw; 
+      height: 100vh; 
+    }
   </style>
 </head>
+
 <body>
   <model-viewer
     src="wasl.glb"
