--- a/index.html
+++ b/index.html
@@ -1,37 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>VR Model - Wasl</title>
+  <title>Babylon VR - Wasl</title>
 
-  <!-- Model Viewer from jsDelivr CDN -->
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <!-- Babylon.js libraries -->
+  <script src="https://cdn.babylonjs.com/babylon.js"></script>
+  <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+  <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
 
   <style>
-    body { 
-      margin: 0; 
-      background: black; 
-      overflow: hidden; 
-    }
-    model-viewer { 
-      width: 100vw; 
-      height: 100vh; 
-    }
+    html, body { width:100%; height:100%; margin:0; padding:0; overflow:hidden; }
+    canvas { width:100%; height:100%; touch-action:none; display:block; }
   </style>
 </head>
 
 <body>
-  <model-viewer
-    src="wasl.glb"
-    alt="Wasl VR Model"
-    vr
-    camera-controls
-    auto-rotate
-    exposure="1"
-    environment-image="neutral"
-    interaction-prompt="auto"
-    min-camera-orbit="auto auto 1m"
-    max-camera-orbit="auto auto 50m">
-  </model-viewer>
+  <canvas id="renderCanvas"></canvas>
+
+  <script>
+    const canvas = document.getElementById("renderCanvas");
+    const engine = new BABYLON.Engine(canvas, true);
+
+    async function createScene() {
+      const scene = new BABYLON.Scene(engine);
+      scene.clearColor = new BABYLON.Color4(0,0,0,1);
+
+      // Light
+      const light = new BABYLON.HemisphericLight("hLight", new BABYLON.Vector3(0,1,0), scene);
+
+      // Ground (needed for teleport)
+      const ground = BABYLON.MeshBuilder.CreateGround("ground", {width:50, height:50}, scene);
+      ground.isVisible = false; // hide ground if not needed
+
+      // Load your GLB model
+      await BABYLON.SceneLoader.AppendAsync("", "wasl.glb", scene);
+
+      // Default XR experience
+      const xr = await scene.createDefaultXRExperienceAsync({
+        floorMeshes: [ground] // teleportable floor
+      });
+
+      // Enable teleportation
+      xr.baseExperience.featuresManager.enableFeature(
+        BABYLON.WebXRFeatureName.TELEPORTATION, "stable", {
+          floorMeshes: [ground]
+      });
+
+      return scene;
+    }
+
+    createScene().then(scene => {
+      engine.runRenderLoop(() => scene.render());
+    });
+
+    window.addEventListener("resize", () => engine.resize());
+  </script>
 </body>
 </html>
